# llmcpp

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  ISSUES.md  LICENSE  Makefile  README.md  RELEASING.md  ROADMAP.md  create_issues.sh  debug_test.cpp  llmcpp-mac-key.pem  openai_response_sample.json  vcpkg.json
.github/workflows/: ci.yml  code-quality.yml  macos-ci.yml  manual-release.yml  release.yml  security.yml
cmake/: llmcppConfig.cmake.in
docs/: COST_OPTIMIZATION.md  INTEGRATION_GUIDE.md  RELEASE_PROCESS.md  VERSIONING.md
examples/: CMakeLists.txt  anthropic_example.cpp  async_example.cpp  basic_usage.cpp
include/: llmcpp.h  llmcpp_version.h.in
include/anthropic/: AnthropicClient.h  AnthropicHttpClient.h  AnthropicSchemaBuilder.h  AnthropicTypes.h
include/core/: ClientFactory.h  ClientManager.h  JsonSchemaBuilder.h  LLMClient.h  LLMTypes.h  ResponseParser.h
include/openai/: OpenAIChatCompletionsApi.h  OpenAIClient.h  OpenAICompletionsApi.h  OpenAIHttpClient.h  OpenAIMcpUtils.h  OpenAIModels.h  OpenAIResponsesApi.h  OpenAISchemaBuilder.h  OpenAITypes.h  OpenAIUtils.h
include/providers/: ClientFactory.h  ClientManager.h
include/utils/: JsonUtils.h
scripts/: create_labels.sh  create_milestones.sh  extract-release-notes.py  release-workflow.sh  release.sh  run_model_benchmarks.sh  update-changelog.py
src/anthropic/: AnthropicClient.cpp  AnthropicHttpClient.cpp  AnthropicSchemaBuilder.cpp
src/core/: ClientFactory.cpp  JsonSchemaBuilder.cpp  LLMClient.cpp  LLMTypes.cpp  ResponseParser.cpp
src/openai/: OpenAIClient.cpp  OpenAIHttpClient.cpp  OpenAIMcpUtils.cpp  OpenAIModels.cpp  OpenAIResponsesApi.cpp  OpenAISchemaBuilder.cpp  OpenAITypes.cpp  OpenAIUtils.cpp
src/providers/: ClientFactory.cpp  ClientManager.cpp
tests/: CMakeLists.txt  README.md  anthropic_real_response.json  openai_response_sample.json  test_client.cpp  test_client_factory.cpp  test_llm_types.cpp  test_openai_client.cpp  test_openai_types.cpp  test_types.cpp
tests/bench/: benchmark_core.cpp  run_model_benchmarks.sh  test_anthropic_benchmarks.cpp  test_benchmarks.cpp  test_unified_benchmarks.cpp
tests/integration/: test_anthropic_integration.cpp  test_benchmarks.cpp  test_mcp_integration.cpp  test_openai_integration.cpp  test_simple_integration.cpp
tests/unit/: test_anthropic_schema_builder.cpp  test_anthropic_types.cpp  test_client.cpp  test_client_factory.cpp  test_json_schema_builder.cpp  test_llm_types.cpp  test_model_enum.cpp  test_openai_client.cpp  test_openai_response_parsing.cpp  test_openai_types.cpp  test_parameter_filtering.cpp  test_response_parser.cpp  test_response_parser_simple.cpp  test_types.cpp
